# rsswise

./: .env.compose.example  .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  package.json  plan.md  skills-lock.json
apps/api/: .dockerignore  .env.example  .env.test.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_email_digest_settings.py  0002_multi_user_auth.py  0003_article_ai_blocks.py  0004_feed_import_jobs.py  0005_article_ai_analysis_logs.py  0006_external_link_collections.py
apps/api/app/: beat.py  main.py  models.py  schemas.py  tasks.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/dependencies/: auth.py
apps/api/app/routers/: articles.py  auth.py  feeds.py  settings.py
apps/api/app/services/: ai_blocks.py  ai_service.py  ai_summary_formatter.py  analysis_events.py  email_digest_service.py  email_digest_settings_service.py  email_service.py  (+5 more)
apps/api/scripts/: generate_test_epub.py
apps/api/tests/: test_ai_blocks.py  test_ai_service.py  test_analysis_events.py  test_articles_api.py  test_auth_api.py  test_beat.py  test_config.py  test_email_digest_service.py  test_email_digest_settings_api.py  test_email_service.py  test_epub_service.py  test_external_link_parser.py  test_extraction_service.py  test_feed_import_service.py  test_feed_service.py  test_feeds_api.py  test_generate_test_epub_script.py  test_models.py  test_tasks.py
(+100 files in other folders)
