[project]
name = "rsswise-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "celery[redis]>=5.4",
  "fastapi>=0.115",
  "feedparser>=6.0",
  "httpx>=0.27",
  "markdown-it-py>=4.2.0",
  "openai>=1.0",
  "Pillow>=11.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "structlog>=24.0",
  "trafilatura>=1.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
